--- a/features/json-raw.yml
+++ b/features/json-raw.yml
@@ -1,5 +1,5 @@
 name: JSON source text access
-description: The `rawJSON` value handling in `JSON.stringify()` and the source context parameter for the `JSON.parse()` reviver callback serialize and parse JSON in a lossless way.
+description: To serialize and parse JSON in a lossless way, `JSON.stringify()` handles `rawJSON` values and `JSON.parse()`'s reviver callback takes a source context parameter.
 group: json
 spec: https://tc39.es/proposal-json-parse-with-source/#sec-json-object
 compat_features:
