--- a/features/symbol.yml
+++ b/features/symbol.yml
@@ -1,5 +1,5 @@
 name: Symbol
-description: The `Symbol` type represents a unique identifier.
+description: The `Symbol` type is used for unique property keys – a symbol never clashes with any other property key (symbol or string).
 spec: https://tc39.es/ecma262/multipage/fundamental-objects.html#sec-symbol-objects
 group: primitive-types
 status:
