Add missing keys

--- a/features/logical-properties.yml
+++ b/features/logical-properties.yml
@@ -8,6 +8,9 @@ status:
   compute_from: css.properties.border-end-end-radius
 compat_features:
   - css.properties.block-size
+  - css.properties.block-size.fit-content
+  - css.properties.block-size.max-content
+  - css.properties.block-size.min-content
   - css.properties.border-block
   - css.properties.border-block-color
   - css.properties.border-block-end
