Add more media queries

--- a/features/media-queries.yml
+++ b/features/media-queries.yml
@@ -16,3 +16,8 @@ compat_features:
   - css.at-rules.media.aspect-ratio
   - css.types.ratio
   - css.at-rules.media.color-index
+  - css.at-rules.media.calc
+  - css.at-rules.media.media_features
+  - css.at-rules.media.media_query_values
+  - css.at-rules.media.nested-queries
+  - css.at-rules.media.or_syntax
