--- a/features/prefers-color-scheme.yml
+++ b/features/prefers-color-scheme.yml
@@ -7,4 +7,5 @@ status:
 compat_features:
   - css.at-rules.media.prefers-color-scheme
   - css.at-rules.media.prefers-color-scheme.respects-inherited-scheme
+  - css.at-rules.media.prefers-color-scheme.no-preference
   - http.headers.Sec-CH-Prefers-Color-Scheme
