--- a/features/media-queries.yml.dist
+++ b/features/media-queries.yml.dist
@@ -27,6 +27,7 @@ compat_features:
   #   safari: "3"
   #   safari_ios: "1"
   - css.at-rules.media
+  - css.at-rules.media.media_features
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -72,6 +73,19 @@ compat_features:
   - css.types.ratio
 
   # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "26"
+  #   chrome_android: "26"
+  #   edge: "12"
+  #   firefox: "11"
+  #   firefox_android: "14"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.at-rules.media.nested-queries
+
+  # baseline: high
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
@@ -84,6 +98,31 @@ compat_features:
   #   safari_ios: "1"
   - css.at-rules.media.monochrome
 
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  #   firefox: "59"
+  #   firefox_android: "59"
+  #   safari: "12"
+  #   safari_ios: "12"
+  - css.at-rules.media.calc
+
+  # baseline: low
+  # baseline_low_date: 2023-03-27
+  # support:
+  #   chrome: "104"
+  #   chrome_android: "104"
+  #   edge: "104"
+  #   firefox: "64"
+  #   firefox_android: "64"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - css.at-rules.media.or_syntax
+
   # baseline: false
   # support:
   #   chrome: "29"
@@ -92,3 +131,12 @@ compat_features:
   #   safari: "8"
   #   safari_ios: "8"
   - css.at-rules.media.color-index
+
+  # baseline: false
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  #   firefox: "59"
+  #   firefox_android: "59"
+  - css.at-rules.media.media_query_values
