Add mask-image keys

--- a/features/masks.yml.dist
+++ b/features/masks.yml.dist
@@ -21,6 +21,8 @@ compat_features:
   - css.properties.mask-composite.intersect
   - css.properties.mask-composite.subtract
   - css.properties.mask-image
+  - css.properties.mask-image.multiple_mask_images
+  - css.properties.mask-image.svg_masks
   - css.properties.mask-mode
   - css.properties.mask-mode.alpha
   - css.properties.mask-mode.luminance
