Add CSSFontFeatureValuesMap keys to font-variant-alternates

--- a/features/font-variant-alternates.yml
+++ b/features/font-variant-alternates.yml
@@ -33,3 +33,15 @@ compat_features:
   - api.CSSFontFeatureValuesRule.styleset
   - api.CSSFontFeatureValuesRule.stylistic
   - api.CSSFontFeatureValuesRule.swash
+  - api.CSSFontFeatureValuesMap
+  - api.CSSFontFeatureValuesMap.@@iterator
+  - api.CSSFontFeatureValuesMap.clear
+  - api.CSSFontFeatureValuesMap.delete
+  - api.CSSFontFeatureValuesMap.entries
+  - api.CSSFontFeatureValuesMap.forEach
+  - api.CSSFontFeatureValuesMap.get
+  - api.CSSFontFeatureValuesMap.has
+  - api.CSSFontFeatureValuesMap.keys
+  - api.CSSFontFeatureValuesMap.set
+  - api.CSSFontFeatureValuesMap.size
+  - api.CSSFontFeatureValuesMap.values
