--- a/features/page-breaks.yml
+++ b/features/page-breaks.yml
@@ -3,3 +3,65 @@ description: The `break-after`, `break-before`, `break-inside` CSS properties (a
 spec: https://drafts.csswg.org/css-break-3/#breaking-controls
 group: layout
 caniuse: css-page-break
+compat_features:
+  - css.properties.break-after
+  - css.properties.break-after.always
+  - css.properties.break-after.auto
+  - css.properties.break-after.avoid
+  - css.properties.break-after.avoid-column
+  - css.properties.break-after.avoid-page
+  - css.properties.break-after.column
+  - css.properties.break-after.left
+  - css.properties.break-after.multicol_context
+  - css.properties.break-after.multicol_context.avoid
+  - css.properties.break-after.multicol_context.avoid-column
+  - css.properties.break-after.multicol_context.column
+  - css.properties.break-after.page
+  - css.properties.break-after.paged_context
+  - css.properties.break-after.paged_context.avoid-page
+  - css.properties.break-after.paged_context.page
+  - css.properties.break-after.recto
+  - css.properties.break-after.right
+  - css.properties.break-after.verso
+  - css.properties.break-before
+  - css.properties.break-before.always
+  - css.properties.break-before.auto
+  - css.properties.break-before.avoid
+  - css.properties.break-before.avoid-column
+  - css.properties.break-before.avoid-page
+  - css.properties.break-before.column
+  - css.properties.break-before.left
+  - css.properties.break-before.multicol_context
+  - css.properties.break-before.multicol_context.avoid
+  - css.properties.break-before.multicol_context.avoid-column
+  - css.properties.break-before.multicol_context.column
+  - css.properties.break-before.page
+  - css.properties.break-before.paged_context
+  - css.properties.break-before.paged_context.page
+  - css.properties.break-before.recto
+  - css.properties.break-before.right
+  - css.properties.break-before.verso
+  - css.properties.break-inside
+  - css.properties.break-inside.auto
+  - css.properties.break-inside.avoid
+  - css.properties.break-inside.avoid-column
+  - css.properties.break-inside.avoid-page
+  - css.properties.break-inside.multicol_context
+  - css.properties.break-inside.multicol_context.avoid-column
+  - css.properties.break-inside.paged_context
+  - css.properties.break-inside.paged_context.avoid-page
+  - css.properties.page-break-after
+  - css.properties.page-break-after.always
+  - css.properties.page-break-after.auto
+  - css.properties.page-break-after.avoid
+  - css.properties.page-break-after.left
+  - css.properties.page-break-after.right
+  - css.properties.page-break-before
+  - css.properties.page-break-before.always
+  - css.properties.page-break-before.auto
+  - css.properties.page-break-before.avoid
+  - css.properties.page-break-before.left
+  - css.properties.page-break-before.right
+  - css.properties.page-break-inside
+  - css.properties.page-break-inside.auto
+  - css.properties.page-break-inside.avoid
