--- a/features/page-breaks.yml.dist
+++ b/features/page-breaks.yml.dist
@@ -3,10 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "50"
-    chrome_android: "50"
-    edge: "12"
+  support: {}
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -20,7 +17,15 @@ compat_features:
   #   safari: "1.2"
   #   safari_ios: "1"
   - css.properties.page-break-after
+  - css.properties.page-break-after.always
+  - css.properties.page-break-after.auto
+  - css.properties.page-break-after.left
+  - css.properties.page-break-after.right
   - css.properties.page-break-before
+  - css.properties.page-break-before.always
+  - css.properties.page-break-before.auto
+  - css.properties.page-break-before.left
+  - css.properties.page-break-before.right
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -34,6 +39,7 @@ compat_features:
   #   safari: "1.3"
   #   safari_ios: "1"
   - css.properties.page-break-inside
+  - css.properties.page-break-inside.auto
   - css.properties.page-break-inside.avoid
 
   # baseline: high
@@ -54,7 +60,95 @@ compat_features:
   - css.properties.break-before.paged_context
   - css.properties.break-before.paged_context.page
   - css.properties.break-inside
+  - css.properties.break-inside.multicol_context
   - css.properties.break-inside.paged_context
+
+  # baseline: high
+  # baseline_low_date: 2020-07-28
+  # baseline_high_date: 2023-01-28
+  # support:
+  #   chrome: ≤80
+  #   chrome_android: "80"
+  #   edge: ≤80
+  #   firefox: ≤72
+  #   firefox_android: "79"
+  #   safari: ≤13.1
+  #   safari_ios: ≤13.4
+  - css.properties.break-after.auto
+  - css.properties.break-after.avoid
+  - css.properties.break-after.left
+  - css.properties.break-after.page
+  - css.properties.break-after.right
+  - css.properties.break-before.auto
+  - css.properties.break-before.avoid
+  - css.properties.break-before.left
+  - css.properties.break-before.page
+  - css.properties.break-before.right
+  - css.properties.break-inside.auto
+  - css.properties.break-inside.avoid
+
+  # baseline: high
+  # baseline_low_date: 2021-09-07
+  # baseline_high_date: 2024-03-07
+  # support:
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "12"
+  #   firefox: "92"
+  #   firefox_android: "92"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - css.properties.break-inside.multicol_context.avoid-column
+
+  # baseline: high
+  # baseline_low_date: 2021-09-07
+  # baseline_high_date: 2024-03-07
+  # support:
+  #   chrome: ≤80
+  #   chrome_android: "80"
+  #   edge: ≤80
+  #   firefox: "92"
+  #   firefox_android: "92"
+  #   safari: ≤13.1
+  #   safari_ios: ≤13.4
+  - css.properties.break-inside.avoid-column
+  - css.properties.break-inside.avoid-page
+
+  # baseline: false
+  # support:
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "12"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - css.properties.break-after.paged_context.avoid-page
+
+  # baseline: false
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "12"
+  #   firefox: "92"
+  #   firefox_android: "92"
+  - css.properties.break-inside.paged_context.avoid-page
+
+  # baseline: false
+  # support:
+  #   chrome: ≤80
+  #   chrome_android: "80"
+  #   edge: ≤80
+  #   safari: ≤13.1
+  #   safari_ios: ≤13.4
+  - css.properties.break-after.avoid-column
+  - css.properties.break-after.avoid-page
+  - css.properties.break-after.column
+  - css.properties.break-after.recto
+  - css.properties.break-after.verso
+  - css.properties.break-before.avoid-column
+  - css.properties.break-before.avoid-page
+  - css.properties.break-before.column
+  - css.properties.break-before.recto
+  - css.properties.break-before.verso
 
   # baseline: false
   # support:
@@ -63,3 +157,36 @@ compat_features:
   #   edge: "12"
   - css.properties.page-break-after.avoid
   - css.properties.page-break-before.avoid
+
+  # baseline: false
+  # support:
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "12"
+  - css.properties.break-after.multicol_context
+  - css.properties.break-after.multicol_context.column
+  - css.properties.break-before.multicol_context
+
+  # baseline: false
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "12"
+  - css.properties.break-before.multicol_context.column
+
+  # baseline: false
+  # support:
+  #   chrome: "102"
+  #   chrome_android: "102"
+  #   edge: "102"
+  - css.properties.break-after.multicol_context.avoid
+  - css.properties.break-after.multicol_context.avoid-column
+  - css.properties.break-before.multicol_context.avoid
+  - css.properties.break-before.multicol_context.avoid-column
+
+  # baseline: false
+  # support:
+  #   firefox: ≤72
+  #   firefox_android: "79"
+  - css.properties.break-after.always
+  - css.properties.break-before.always
