--- a/features/page-selectors.yml
+++ b/features/page-selectors.yml
@@ -1,10 +1,11 @@
 name: Page selectors
-description: The `page` CSS property matches a page defined by an `@page` rule. The `:first`, `:left`, `:right`, `:blank` pseudo-classes match pages based on their sequence or printable content after pagination.
+description: The `page` CSS property matches a page defined by an `@page` rule. The `:first`, `:left`, and `:right` pseudo-classes match pages based on their position in sequence after pagination.
 spec: https://drafts.csswg.org/css-page-3/#page-selectors
-group: css
+group:
+  - css
+  - print
 compat_features:
   - css.properties.page
   - css.selectors.first
   - css.selectors.left
   - css.selectors.right
-  - css.selectors.blank
