--- a/features/page-selectors.yml.dist
+++ b/features/page-selectors.yml.dist
@@ -3,7 +3,12 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "85"
+    chrome_android: "85"
+    edge: "85"
+    safari: ≤13.1
+    safari_ios: ≤13.4
 compat_features:
   # baseline: low
   # baseline_low_date: 2023-02-14
@@ -38,8 +43,3 @@ compat_features:
   #   safari_ios: "4.2"
   - css.selectors.left
   - css.selectors.right
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support: {}
-  - css.selectors.blank
