Refresh dist (shipping)

--- a/features/anchor-positioning.yml.dist
+++ b/features/anchor-positioning.yml.dist
@@ -146,10 +146,11 @@ compat_features:
   - css.properties.position-try-fallbacks.position-area
 
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "129"
+  #   chrome_android: "129"
   - api.CSSPositionTryDescriptors.position-area
   - api.CSSPositionTryDescriptors.positionArea
-  - css.properties.position-anchor.auto
   - css.properties.position-area
   - css.properties.position-area.block-end
   - css.properties.position-area.block-start
@@ -186,3 +187,7 @@ compat_features:
   - css.properties.position-area.y-self-end
   - css.properties.position-area.y-self-start
   - css.properties.position-area.y-start
+
+  # baseline: false
+  # support: {}
+  - css.properties.position-anchor.auto
