--- a/features/backdrop-filter.yml.dist
+++ b/features/backdrop-filter.yml.dist
@@ -9,5 +9,7 @@ status:
     edge: "79"
     firefox: "103"
     firefox_android: "103"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   - css.properties.backdrop-filter
