--- a/features/canvas-2d-willreadfrequently.yml.dist
+++ b/features/canvas-2d-willreadfrequently.yml.dist
@@ -9,5 +9,7 @@ status:
     edge: "99"
     firefox: "28"
     firefox_android: "28"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   - api.HTMLCanvasElement.getContext.2d_context.options_willReadFrequently_parameter
