--- a/features/container-style-queries.yml.dist
+++ b/features/container-style-queries.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "111"
     chrome_android: "111"
     edge: "111"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   - css.at-rules.container.style_queries_for_custom_properties
