--- a/features/loading-lazy.yml.dist
+++ b/features/loading-lazy.yml.dist
@@ -13,8 +13,9 @@ status:
     safari: "16.4"
     safari_ios: "16.4"
 compat_features:
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "77"
   #   chrome_android: "77"
