--- a/features/aborting.yml.dist
+++ b/features/aborting.yml.dist
@@ -59,8 +59,9 @@ compat_features:
   #   safari_ios: "15"
   - api.AbortSignal.abort_static
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "98"
   #   chrome_android: "98"
