--- a/features/geolocation.yml.dist
+++ b/features/geolocation.yml.dist
@@ -94,6 +94,8 @@ compat_features:
   #   edge: "126"
   #   firefox: "129"
   #   firefox_android: "129"
+  #   safari: "18"
+  #   safari_ios: "18"
   - api.GeolocationCoordinates.toJSON
   - api.GeolocationPosition.toJSON
 
