--- a/features/intl-duration-format.yml.dist
+++ b/features/intl-duration-format.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "129"
+    chrome_android: "129"
     safari: "16.4"
     safari_ios: "16.4"
 compat_features:
