--- a/features/motion-path.yml.dist
+++ b/features/motion-path.yml.dist
@@ -13,8 +13,9 @@ status:
     safari: "16"
     safari_ios: "16"
 compat_features:
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "55"
   #   chrome_android: "55"
