--- a/features/writingsuggestions.yml.dist
+++ b/features/writingsuggestions.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "124"
     chrome_android: "124"
     edge: "124"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   - api.HTMLElement.writingSuggestions
   - html.global_attributes.writingsuggestions
