--- a/features/draft/spec/css-view-transitions-2.yml.dist
+++ b/features/draft/spec/css-view-transitions-2.yml.dist
@@ -13,7 +13,18 @@ compat_features:
   #   chrome: "111"
   #   chrome_android: "111"
   #   edge: "111"
+  #   safari: "18"
+  #   safari_ios: "18"
   - css.properties.view-transition-name.none
+
+  # baseline: false
+  # support:
+  #   chrome: "125"
+  #   chrome_android: "125"
+  #   edge: "125"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - css.selectors.active-view-transition
 
   # baseline: false
   # support:
@@ -24,7 +35,6 @@ compat_features:
   - api.ViewTransitionTypeSet
   - css.properties.view-transition-class
   - css.properties.view-transition-class.none
-  - css.selectors.active-view-transition
   - css.selectors.active-view-transition-type
 
   # ⬇️ Same status as overall feature ⬇️
