--- a/features/draft/spec/ecmascript.yml.dist
+++ b/features/draft/spec/ecmascript.yml.dist
@@ -1083,8 +1083,9 @@ compat_features:
   - javascript.builtins.Error.Error.options_cause_parameter
   - javascript.builtins.Error.cause
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "93"
   #   chrome_android: "93"
