--- a/features/draft/spec/fileapi.yml.dist
+++ b/features/draft/spec/fileapi.yml.dist
@@ -6,6 +6,8 @@ status:
   support:
     firefox: "128"
     firefox_android: "128"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -229,4 +231,6 @@ compat_features:
   # support:
   #   firefox: "128"
   #   firefox_android: "128"
+  #   safari: "18"
+  #   safari_ios: "18"
   - api.Blob.bytes
