--- a/features/draft/spec/media-capabilities.yml.dist
+++ b/features/draft/spec/media-capabilities.yml.dist
@@ -25,8 +25,9 @@ compat_features:
   - api.MediaCapabilities.decodingInfo
   - api.Navigator.mediaCapabilities
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "76"
   #   chrome_android: "76"
