--- a/features/draft/spec/wai-aria-1-3.yml.dist
+++ b/features/draft/spec/wai-aria-1-3.yml.dist
@@ -101,24 +101,26 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "107"
+  #   chrome_android: "107"
+  #   edge: "107"
+  #   firefox: "125"
+  #   firefox_android: "125"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.Element.ariaBrailleLabel
+  - api.Element.ariaBrailleRoleDescription
+  - api.ElementInternals.ariaBrailleLabel
+  - api.ElementInternals.ariaBrailleRoleDescription
+
+  # baseline: false
+  # support:
   #   chrome: "83"
   #   chrome_android: "83"
   #   edge: "83"
   #   firefox: "119"
   #   firefox_android: "119"
   - api.ElementInternals.ariaDescription
-
-  # baseline: false
-  # support:
-  #   chrome: "107"
-  #   chrome_android: "107"
-  #   edge: "107"
-  #   firefox: "125"
-  #   firefox_android: "125"
-  - api.Element.ariaBrailleLabel
-  - api.Element.ariaBrailleRoleDescription
-  - api.ElementInternals.ariaBrailleLabel
-  - api.ElementInternals.ariaBrailleRoleDescription
 
   # baseline: false
   # support:
