--- a/features/draft/spec/webgl-compressed-texture-pvrtc.yml.dist
+++ b/features/draft/spec/webgl-compressed-texture-pvrtc.yml.dist
@@ -4,7 +4,9 @@
 status:
   baseline: false
   support:
+    chrome: "128"
     chrome_android: "28"
+    edge: "128"
     safari: "7"
     safari_ios: "7"
 compat_features:
