--- a/features/draft/spec/compute-pressure.yml.dist
+++ b/features/draft/spec/compute-pressure.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "129"
+    chrome_android: "129"
 compat_features:
   - webdriver.commands.CreateVirtualPressureSource
   - webdriver.commands.DeleteVirtualPressureSource
