--- a/features/draft/spec/css-contain-3.yml.dist
+++ b/features/draft/spec/css-contain-3.yml.dist
@@ -10,8 +10,9 @@ status:
     firefox: "130"
     firefox_android: "130"
 compat_features:
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "52"
   #   chrome_android: "52"
@@ -31,6 +32,8 @@ compat_features:
   #   edge: "85"
   #   firefox: "125"
   #   firefox_android: "125"
+  #   safari: "18"
+  #   safari_ios: "18"
   - css.properties.content-visibility.auto
   - css.properties.content-visibility.hidden
   - css.properties.content-visibility.visible
