--- a/features/draft/spec/css-overflow-4.yml.dist
+++ b/features/draft/spec/css-overflow-4.yml.dist
@@ -80,8 +80,9 @@ compat_features:
   - css.properties.text-overflow.clip
   - css.properties.text-overflow.ellipsis
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "61"
   #   chrome_android: "61"
