--- a/features/draft/spec/css-text-4.yml.dist
+++ b/features/draft/spec/css-text-4.yml.dist
@@ -157,8 +157,9 @@ compat_features:
   - css.properties.line-break.loose
   - css.properties.line-break.strict
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "80"
   #   chrome_android: "80"
