--- a/features/draft/spec/css-text-decor-4.yml.dist
+++ b/features/draft/spec/css-text-decor-4.yml.dist
@@ -140,8 +140,9 @@ compat_features:
   - css.properties.text-emphasis-style.sesame
   - css.properties.text-emphasis-style.triangle
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "64"
   #   chrome_android: "64"
