--- a/features/draft/spec/resize-observer-1.yml.dist
+++ b/features/draft/spec/resize-observer-1.yml.dist
@@ -30,8 +30,9 @@ compat_features:
   - api.ResizeObserverEntry.contentRect
   - api.ResizeObserverEntry.target
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "84"
   #   chrome_android: "84"
@@ -44,8 +45,9 @@ compat_features:
   - api.ResizeObserverSize.blockSize
   - api.ResizeObserverSize.inlineSize
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
   # support:
   #   chrome: "84"
   #   chrome_android: "84"
