--- a/features/draft/spec/url.yml.dist
+++ b/features/draft/spec/url.yml.dist
@@ -9,6 +9,8 @@ status:
     edge: "126"
     firefox: "126"
     firefox_android: "126"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -205,4 +207,6 @@ compat_features:
   #   edge: "126"
   #   firefox: "126"
   #   firefox_android: "126"
+  #   safari: "18"
+  #   safari_ios: "18"
   - api.URL.parse_static
