--- a/features/draft/spec/mediaqueries-5.yml
+++ b/features/draft/spec/mediaqueries-5.yml
@@ -1,8 +1,9 @@
-draft_date: 2024-09-09
+draft_date: 2024-09-18
 name: Media Queries Level 5
 description: TODO
 spec: https://drafts.csswg.org/mediaqueries-5/
 compat_features:
+  - css.at-rules.custom-media
   - css.at-rules.media
   - css.at-rules.media.any-hover
   - css.at-rules.media.any-pointer
