--- a/features/geolocation.yml.dist
+++ b/features/geolocation.yml.dist
@@ -87,13 +87,16 @@ compat_features:
   - api.GeolocationPositionError.message
   - api.GeolocationPositionError.secure_context_required
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-09-16
   # support:
   #   chrome: "126"
   #   chrome_android: "126"
   #   edge: "126"
   #   firefox: "129"
   #   firefox_android: "129"
+  #   safari: "18"
+  #   safari_ios: "18"
   - api.GeolocationCoordinates.toJSON
   - api.GeolocationPosition.toJSON
 
