--- a/features/column-breaks.yml
+++ b/features/column-breaks.yml
@@ -2,3 +2,19 @@ name: Column breaks
 description: In columnar layouts (created by the `columns` or `column-count` CSS properties), the `break-after`, `break-before`, `break-inside` properties control where columns start or end.
 spec: https://drafts.csswg.org/css-break-3/#breaking-controls
 group: layout
+compat_features:
+    - css.properties.break-after.avoid-column
+    - css.properties.break-after.column
+    - css.properties.break-after.multicol_context
+    - css.properties.break-after.multicol_context.avoid
+    - css.properties.break-after.multicol_context.avoid-column
+    - css.properties.break-after.multicol_context.column
+    - css.properties.break-before.avoid-column
+    - css.properties.break-before.column
+    - css.properties.break-before.multicol_context
+    - css.properties.break-before.multicol_context.avoid
+    - css.properties.break-before.multicol_context.avoid-column
+    - css.properties.break-before.multicol_context.column
+    - css.properties.break-inside.avoid-column
+    - css.properties.break-inside.multicol_context
+    - css.properties.break-inside.multicol_context.avoid-column
