--- a/features/interaction.yml
+++ b/features/interaction.yml
@@ -1,5 +1,5 @@
 name: Interaction media queries
-description: "The `pointer`, `any-pointer`, `hover`, and `any-hover` CSS media queries set styles based on the presence of pointing devices and their ability to hover over elements. For example, a smartphone device would match the `(hover: none) and (pointer: coarse)` media query."
+description: "The `pointer`, `any-pointer`, `hover`, and `any-hover` CSS media queries set styles based on the presence of pointing devices and their ability to hover over elements. For example, most smartphones match the `(hover: none) and (pointer: coarse)` media query."
 spec: https://drafts.csswg.org/mediaqueries-5/#mf-interaction
 caniuse: css-media-interaction
 group: media-queries
