--- a/features/prefers-contrast.yml
+++ b/features/prefers-contrast.yml
@@ -1,5 +1,5 @@
 name: prefers-contrast media query
-description: The `prefers-contrast` CSS media query sets styles based on whether the user prefers more or less contrast.
+description: The `prefers-contrast` CSS media query sets styles based on whether the user prefers more or less contrast, the difference between foreground and background colors.  
 spec: https://drafts.csswg.org/mediaqueries-5/#prefers-contrast
 group: media-queries
 compat_features:
