--- a/features/prefers-reduced-motion.yml
+++ b/features/prefers-reduced-motion.yml
@@ -1,8 +1,6 @@
 name: prefers-reduced-motion media query
-description: The `prefers-reduced-motion` CSS media query sets styles based on whether the user prefers to minimize the amount of non-essential animations on the device.
-spec:
-  - https://drafts.csswg.org/mediaqueries-5/#prefers-reduced-motion
-  - https://wicg.github.io/user-preference-media-features-headers/#sec-ch-prefers-reduced-motion
+description: The `prefers-reduced-motion` CSS media query sets styles based on whether the user prefers to minimize the amount of non-essential animations on the device, such as scrolling, panning, zooming, and strobing.
+spec: https://drafts.csswg.org/mediaqueries-5/#prefers-reduced-motion
 caniuse: prefers-reduced-motion
 group: media-queries
 status:
