--- a/features/prefers-reduced-data.yml
+++ b/features/prefers-reduced-data.yml
@@ -1,5 +1,5 @@
 name: prefers-reduced-data media query
-description: The `prefers-reduced-data` CSS media query detects whether the user has a preference for using less internet traffic. For example, you can use this media query to avoid loading large font files and use a system font instead.
+description: The `prefers-reduced-data` CSS media query detects whether the user has a preference for using less network traffic. For example, you can use this media query to avoid loading large font files and use a system font instead.
 spec: https://drafts.csswg.org/mediaqueries-5/#prefers-reduced-data
 group: media-queries
 compat_features:
