--- a/features/prefers-reduced-transparency.yml
+++ b/features/prefers-reduced-transparency.yml
@@ -1,8 +1,6 @@
 name: prefers-reduced-transparency media query
 description: The `prefers-reduced-transparency` CSS media query sets styles based on whether the user prefers to reduce the amount of transparent effects on their device, for example to improve contrast and legibility.
-spec:
-  - https://drafts.csswg.org/mediaqueries-5/#prefers-reduced-transparency
-  - https://wicg.github.io/user-preference-media-features-headers/#sec-ch-prefers-reduced-transparency
+spec: https://drafts.csswg.org/mediaqueries-5/#prefers-reduced-transparency
 group: media-queries
 compat_features:
   - css.at-rules.media.prefers-reduced-transparency
